# Electronic-Voting-System

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  Makefile  README.md  ballot_keys.md  main.cpp  main_ballot.cpp  main_pairing.cpp  nano.save  param
Code/ECC/: FiniteFieldElement.hpp  FiniteFieldElement_bn.hpp  constants.hpp  main.cpp  main_bn.cpp  makefile  script
TodoList/: Makefile_pbc_installation  design  steps
app/: db.sqlite3  makefile
app/app/: settings.py  urls.py
app/server/: admin.py  common_imports.py  forms.py  models.py  urls.py  views.py
app/server/migrations/: 0001_initial.py  0002_auto_20211212_1703.py  0002_uploadimage.py
app/server/templates/server/: bb1.html  bb2.html  evm_vvpr_receipt.html  form.html  index.html  partial_receipt_ballot_scanning.html  voter_receipt.html  vvpr_receipt.html
docs/: README.md
docs/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  ballot_8cpp.html  ballot_8cpp__incl.dot  ballot_8hpp.html  ballot_8hpp__dep__incl.dot  ballot_8hpp__incl.dot  ballot_8hpp_source.html  bb1__element_8hpp.html  bb1__element_8hpp__dep__incl.dot  bb1__element_8hpp__incl.dot  bb1__element_8hpp_source.html  bb2__element_8hpp.html  bb2__element_8hpp__dep__incl.dot  bb2__element_8hpp__incl.dot  bb2__element_8hpp_source.html  bilinear__mapping_8cpp.html  bilinear__mapping_8cpp.js  bilinear__mapping_8cpp__incl.dot  bilinear__mapping_8hpp.html  bilinear__mapping_8hpp.js  bilinear__mapping_8hpp__dep__incl.dot  bilinear__mapping_8hpp__incl.dot  bilinear__mapping_8hpp_source.html  class_ballot-members.html  class_ballot.html  class_ballot.js  class_e_v_m-members.html  class_e_v_m.html  class_e_v_m.js  class_pairing-members.html  class_pairing.html  class_pairing.js  classes.html  commitment_8cpp.html  commitment_8cpp.js  commitment_8cpp__incl.dot  commitment_8hpp.html  (+241 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+37 more)
docs/latex/: _c_make_lists_8txt.tex  annotated.tex  ballot_8cpp.tex  ballot_8cpp__incl.dot  ballot_8hpp.tex  ballot_8hpp.tex.tmp  ballot_8hpp__dep__incl.dot  ballot_8hpp__incl.dot  bb1__element_8hpp.tex  bb1__element_8hpp__dep__incl.dot  bb1__element_8hpp__incl.dot  bb2__element_8hpp.tex  bb2__element_8hpp__dep__incl.dot  bb2__element_8hpp__incl.dot  bilinear__mapping_8cpp.tex  bilinear__mapping_8cpp__incl.dot  bilinear__mapping_8hpp.tex  bilinear__mapping_8hpp__dep__incl.dot  bilinear__mapping_8hpp__incl.dot  class_ballot.tex  class_e_v_m.tex  class_pairing.tex  commitment_8cpp.tex  commitment_8cpp__incl.dot  commitment_8hpp.tex  commitment_8hpp__dep__incl.dot  commitment_8hpp__incl.dot  common_8cpp.tex  common_8cpp__incl.dot  common_8hpp.tex  common_8hpp__dep__incl.dot  common_8hpp__incl.dot  defines_8hpp.tex  dir_075cb8930e442d16af3ca7acfb17ada5.tex  dir_075cb8930e442d16af3ca7acfb17ada5_dep.dot  dir_0aac1adaac46f0a598e2b778a2c2ff67.tex  dir_0f5e4892eb6071b0f00d3e1e8e63bc66.tex  dir_0f5e4892eb6071b0f00d3e1e8e63bc66_dep.dot  dir_1497514508e6981185c240cc809d5856.tex  dir_31ec22113afe63ccb735da375c5d489a.tex  (+126 more)
include/protocol/ea/: README.md
include/protocol/ea/ballot/: README.md  ballot.hpp
include/protocol/evm/: README.md  bb1_element.hpp  bb2_element.hpp  evm.hpp  evm_receipt.hpp  receipt.hpp  rvote_element.hpp  voter_receipt.hpp  vvpr_receipt.hpp
include/protocol/verif/: README.md  generate_ballot.hpp
include/protocol/verif/ballotaudit/: README.md
include/protocol/verif/bbaudit/: README.md
include/protocol/verif/vvprcheck/: README.md
include/util/: common.hpp  defines.hpp  helper_functions.hpp
include/util/bilinear-mapping/: bilinear_mapping.hpp
include/util/commitment/: commitment.hpp
include/util/ecc/: README.md
include/util/encryption/: encryption.hpp
include/util/io/qr/: README.md  qrcode.hpp
include/util/pairing/: README.md  pairing.hpp
include/util/signature/: signature.hpp
include/util/zk/: README.md  reverse_set_membership.hpp  set_membership_zkp.h
protocol1/verif/votercheck/: README.md
src/protocol/: README.md
src/protocol/evm/: evm.cpp  receipt.cpp
src/protocol/po/: README.md
src/protocol/verif/: generate_ballot.cpp
src/util/: common.cpp  helper_functions.cpp
src/util/bilinear-mapping/: bilinear_mapping.cpp
src/util/commitment/: commitment.cpp
src/util/encryption/: encryption.cpp
src/util/pairing/: pairing.cpp
src/util/signature/: bls.cpp
src/util/zk/: reverse_set_membership.cpp  set_membership_zkp.cpp
testing/: CMakeLists.txt  Makefile  test.cpp
testing_shared_lib/: main.py
todolist/: git_commit  makefile  steps
util/: CMakeLists.txt  Makefile  README.md  test.cpp
util/BallotGeneration/: Makefile  ballot.hpp  main.cpp  param
util/ballot-generation/: Makefile  ballot.cpp  ballot.hpp  design  main.cpp  param
util/bilinear-mapping/: bilinear_mapping.cpp  bilinear_mapping.hpp
util/commitment/: Makefile  README.md  commitment.cpp  commitment.hpp  constant.hpp  constant_old.hpp  constants.hpp  main.cpp  main_old.cpp  pair.cpp  pair.hpp  param
util/common/: common.cpp  common.hpp
util/ecc/: FiniteFieldElement.hpp  constants.hpp
util/evm/: evm.cpp  evm.hpp  evm_receipt.hpp  voter_receipt.hpp
util/io/: README.md
util/main_code/: Makefile  main.cpp  param
util/pairing/: BilinearMapping.cpp  BilinearMapping.hpp  Design  Makefile  commitment.cpp  commitment.hpp  constant.hpp  helper_functions.cpp  helper_functions.hpp  main.cpp  pair.cpp  pair.hpp  param
util/protocol/: Makefile  main.cpp  param  protocol.cpp  protocol.hpp
util/testing/: CMakeLists.txt  Makefile  test.cpp
util/vvpr/: vvpr.hpp  vvpr_receipt.hpp
util/zk/: ZKP_set_membership1.cpp  ZKP_set_membership2.cpp  discrete_log.cpp
(+10 files in other folders)
